--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,6 +19,8 @@ services:
     restart: always
     build:
       context: ./node
+    volumes:
+      - ./node:/usr/src/app
     depends_on:
       db:
         condition: service_healthy
