altera caminho do volumes

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,7 +20,7 @@ services:
     build:
       context: ./node
     volumes:
-      - ./node:/app
+      - ./node:/usr/src/app
     depends_on:
       db:
         condition: service_healthy
